# RabbitMQ-rust-example

./: docker-compose.yml
publisher/src/: main.rs
subscriber/: Cargo.toml
subscriber/src/: main.rs
